--- a/testenv/Makefile
+++ b/testenv/Makefile
@@ -24,8 +24,6 @@ SEND_FILE	= $(addprefix ./src/sender/,$(SEND_SRC))
 RECV_FILE	= $(addprefix ./src/receiver/,$(RECV_SRC))
 OBJ_SEND	= $(SEND_FILE:.c=.o)
 OBJ_RECV	= $(RECV_FILE:.c=.o)
-LC			= -LC:\Users\alexn\Desktop\Rando-code\SDL_mingw\SDL2-2.0.14\x86_64-w64-mingw32\lib -LC:\Users\alexn\Desktop\All-things-coding\OBJ_test -LC:\Users\alexn\Desktop\All-things-coding\OBJ_test -L"C:\Program Files\CodeBlocks\MinGW\lib\x64"
-LIB			= -lmingw32 -luser32 -lws2_32 -lmswsock -ladvapi32
 
 .PHONY: all clean fclean re
 
@@ -39,8 +37,8 @@ $(LIBFT):
 	@make -C ./libft
 
 $(NAME): $(OBJ_SEND) $(OBJ_RECV) $(LIBFT) $(LIBAX)
-	gcc $(FLAGS) $(LC) $(INCLUDES) -o $(NAME) $(OBJ_SEND) $(LIBFT)
-	gcc $(FLAGS) $(LC) $(INCLUDES) -o $(RECV) $(OBJ_RECV) $(LIBFT)
+	@gcc $(FLAGS) $(INCLUDES) -o $(NAME) $(OBJ_SEND) $(LIBFT)
+	@gcc $(FLAGS) $(INCLUDES) -o $(RECV) $(OBJ_RECV) $(LIBFT)
 	@mv script_recv ./testenv
 
 clean:
